Movies' list HTML WIP

--- a/index.html
+++ b/index.html
@@ -25,7 +25,31 @@
 
 			<button class="search-form__submit-button" type="button">Search</button>
 		</form>
+
 		<hr>
+
+		<!-- MOVIES LIST -->
+		<section class="movies">
+			<h2 class="movies__title visually-hidden">Movies' list</h2>
+
+			<ul class="movies__list">
+				<li class="movies__item movie">
+					<header class="movie__header">
+						<h3 class="movie__title">Lorem ipsum dolor sit.</h3>
+						<span class="movie__rating">9.9</span>
+					</header>
+					<div class="movie__meta">
+						<div class="movie__year">2019</div>
+						<div class="movie__genres">Action</div>
+					</div>
+					<footer class="movie__actions">
+						<a class="movie__trailer-link" href="https://youtube.com/watch?v=">Watch trailer</a>
+						<button class="movie__bookmark" type="button">Add to watchlist</button>
+					</footer>
+				</li>
+			</ul>
+		</section>
+
 	</div>
 
 	<script src="js/scripts.js"></script>
