--- a/index.html
+++ b/index.html
@@ -140,6 +140,15 @@
 
 	</div>
 
+
+	<section class="modal">
+		<div class="modal__content">
+			<button class="modal__close-button" type="button">X</button>
+			<h2 class="modal__movie-title">Lorem ipsum dolor sit amet.</h2>
+			<p class="modal__movie-summary">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, pariatur placeat! Repellat saepe eum sequi unde, qui consequatur, ea aut, nobis laboriosam corrupti reprehenderit! Laborum distinctio cumque nesciunt minus at esse sequi voluptates, excepturi rem est quisquam tempora nisi nemo ullam porro cupiditate ducimus! Minima magni delectus eligendi aspernatur voluptas.</p>
+		</div>
+	</section>
+
 	<script src="js/scripts.js"></script>
 </body>
 </html>
