--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 					<select class="search-form__select" name="genre" id="genre-select"></select>
 
 					<label class="visually-hidden" for="min-year-input">Released after</label>
-					<input class="search-form__input" type="number" name="min_year" id="min-year-input" placeholder="From" required>
+					<input class="search-form__input" type="number" name="min_year" id="min-year-input" placeholder="From" value="1900" required>
 
 					<label class="visually-hidden" for="max-year-input">Released before</label>
-					<input class="search-form__input" type="number" name="max_year" id="max-year-input" placeholder="To" required>
+					<input class="search-form__input" type="number" name="max_year" id="max-year-input" placeholder="To" value="2025" required>
 
-					<button class="search-form__submit-button" type="button">Search</button>
+					<button class="search-form__submit-button" type="submit">Search</button>
 				</form>
 				
 				<hr>
