Add watchlist feature

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<footer class="movie__actions">
 				<a class="movie__trailer-link" href="https://youtube.com/watch?v=">Watch trailer</a>
 				<button class="movie__summary-button" type="button">Read summary</button>
-				<button class="movie__bookmark" type="button">Add to watchlist</button>
+				<button class="movie__bookmark-button" type="button">Add to watchlist</button>
 			</footer>
 		</li>
 	</template>
